# AIOS

./: .gitignore  AGENTS.md  CLAUDE.md
.github/workflows/: build.yml
apps/client_flutter/: README.md  analysis_options.yaml  pubspec.yaml
apps/client_flutter/lib/: main.dart
apps/client_flutter/test/: chat_history_test.dart  confirm_dialog_test.dart  genui_layout_test.dart  metric_chart_test.dart  offline_fallback_test.dart  product_card_test.dart  rfw_backend_test.dart  widget_test.dart
apps/client_flutter/web/: index.html  manifest.json
apps/client_flutter/windows/: CMakeLists.txt
apps/headless_daemon/: daemon_config.json  gateway_devices.json  pubspec.yaml
apps/headless_daemon/lib/: config.dart  discovery.dart
docs/: developer_guide.md
hermes/: README.md  config.yaml  env.example
hermes/custom_tools/: render_ui.py
scripts/: run_system_tests.py  setup_hermes.ps1  setup_hermes.sh
services/mcp_proxy/: README.md
services/omniparser/: README.md  pyproject.toml
services/omniparser/src/omniparser_server/: __init__.py  __main__.py  models.py  parser.py  server.py
services/render_adapter/: pyproject.toml
services/render_adapter/src/render_adapter/: __init__.py  __main__.py  a2a_client.py  config.py  hermes_client.py  hitl.py  platform_tools.py  render_ui.py  server.py  tasks.py  translate.py
services/render_adapter/tests/: conftest.py  test_discovery.py  test_headless_daemon.py  test_hitl.py  test_platform_tools.py  test_render_adapter_full.py  test_render_ui.py  test_tasks.py  test_translate.py
tests/integration/: test_ha_mcp.py
(+54 files in other folders)
