[project]
name = "render-adapter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13",
    "httpx>=0.27",
    "jsonschema>=4.23",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "ui-spec"
]

[tool.uv.sources]
ui-spec = { path = "../../packages/ui_spec" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/render_adapter"]

[tool.ruff]
line-length = 100
